Feature: fa3st client extension (#220)
* chore: purge java.net.URLs

* feat: add HttpClientBuilder getters

* feat: use client in aas-extension

* feat: improvements to common extension

* fix: test compilation

* feat: extract AAS server mgmt

* feat: use extracted AAS mgmt
part one. next part is tests

* fix: project meta files

* feat: clean up PolicyHelper

* feat: dont expose AAS context

* test: add test cases

* docs: add event-based feature in changelog

* test: add EdcStoreHandler tests

* test: enforce wiremock

* test: update self-description, assets

* feat: new reference repr in AAS DA

* deps: optimize test fixtures

* chore: adopt fa3st codestyle

* feat: configurable onlySubm., self-signed

* test: improved error documentation

* docs: add change to changelog.md

* test: set logfile target dir

* feat: add policyBindings to local services

* feat: move FA3ST deps to repo-aas

* feat: remove unused model files

* deps: update fa3st to 1.3.0

* deps: further optimize build files

* feat: use AAS DP if config

* feat: convenience for DTOs

* feat: disentangle controllers

* feat: remove unnecessary extension

* feat: add javadoc to DTOs

* fix: sample material

* chore: cleanup and fixes

* feat: naming of DTO field

* docs: add bruno API calls

* docs: add bruno API calls

* feat: fixes

* fix: AAS DA validator

* fix: final fixes

* deps: snapshots to base repo

* fix: replace docker image src

* feat: default policies per server

* style: checkstyle and formatting

* feat: helper for asset id creation

* fix: cleanups of unused/formatting

* fix: more fixes

* fix: deserialization bug for aas4j-References

* fix: remove unused import

* feat: use correct line endings

* feat: add filtering for self-description

* chore: checkstyle

* feat: use one policy for access/usage

* feat: remove aas prefix from modelType