@@ -29,8 +29,8 @@ import org.junit.jupiter.api.Test;
 
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.util.stream.Stream;
 
@@ -42,14 +42,16 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
+
 class AasDataSinkTest {
 
-    static URL destinationUrl;
+    static URI destinationUri;
 
     static {
         try {
-            destinationUrl = new URL("https://localhost:%s/api/v3.0".formatted(getFreePort()));
-        } catch (MalformedURLException e) {
+            destinationUri = new URI("https://localhost:%s/api/v3.0".formatted(getFreePort()));
+        }
+        catch (URISyntaxException e) {
             throw new RuntimeException(e);
         }
     }
@@ -59,6 +61,7 @@ class AasDataSinkTest {
     AasDataProcessorFactory mockAasDataprocessorFactory = mock(AasDataProcessorFactory.class);
     AasDataAddress mockAasDataAddress = mock(AasDataAddress.class);
 
+
     @BeforeEach
     void setUp() {
         testSubject = AasDataSink.Builder.newInstance()
@@ -67,6 +70,7 @@ class AasDataSinkTest {
                 .monitor(new ConsoleMonitor().withPrefix(this.getClass().getSimpleName()))
                 .build();
     }
+
 
     @Test
     void test_transfer_normalBehaviour() throws IOException {
@@ -78,7 +82,7 @@ class AasDataSinkTest {
         when(mockDataSource.openPartStream()).thenReturn(StreamResult.success(Stream.of(mockAasPart)));
 
         // Destination address mock
-        when(mockAasDataAddress.getBaseUrl()).thenReturn(destinationUrl.toString());
+        when(mockAasDataAddress.getBaseUrl()).thenReturn(destinationUri.toString());
 
         AasDataProcessor mockAasDataProcessor = mock(AasDataProcessor.class);
         when(mockAasDataprocessorFactory.processorFor(any())).thenReturn(Result.success(mockAasDataProcessor));
